Added bootstrap classes and copy

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,8 @@
-<h2 class="jumbotron">Home!</h2>
+<div class="jumbotron text-center">
+    <h1>Welcome to Dev Match!</h1>
+    <h3>A membership site where entrepreneurs can meet developers.</h3>
+</div>
+ 
+<div class="text-center">
+    <img src="http://www.wallpaperbetter.com/wallpaper/77/17/248/proxy-falls-cascade-range-oregon-1080P-wallpaper-middle-size.jpg"/>
+</div>
