--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
   
   <div class="container">
     <% flash.each do |key, value| %>
-      <%= content_tag :div, value, class: "alert alert-#{key}" %>
+      <%= content_tag :div, value, class: "alert alert-#{key} col-md-4 col-md-offset-4" %>
     <% end %>
     
     <%= yield %>
