--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Dev Match</title>
+    <title>Pole-Up.com | Online Pole Dance Lessons</title>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
@@ -19,8 +19,8 @@
           </button>
           
           <%= link_to root_path, class: 'navbar-brand' do %>
-            <i class="fa fa-users"></i>
-            Dev Match
+            <i class="fa fa-star-o"></i>
+            Pole-Up
           <% end %>
           
         </div>
