--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,9 @@
 <div class="jumbotron text-center">
-    <h1>Welcome to Dev Match!</h1>
-    <h3>A membership site where entrepreneurs can meet developers.</h3>
+    <h1>Welcome to Pole-Up</h1>
+    <h3>Learn How To Pole Dance At Home While Getting A Great Workout. </h3>
+    <h3>Unlock New Moves As You Go!</h3>
 </div>
  
 <div class="text-center">
-    <img src="http://www.wallpaperbetter.com/wallpaper/77/17/248/proxy-falls-cascade-range-oregon-1080P-wallpaper-middle-size.jpg"/>
+    <img src="https://static1.squarespace.com/static/53321908e4b0e6650a1f0e80/t/563e80cce4b02dccf8b08ad5/1446936781866/Bunny+girl+image.jpg"/>
 </div>
