Added plan model and db table

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,6 +4,5 @@
     <h3>Unlock New Moves As You Go!</h3>
 </div>
  
-<div class="text-center well">
-    <img src="https://static1.squarespace.com/static/53321908e4b0e6650a1f0e80/t/563e80cce4b02dccf8b08ad5/1446936781866/Bunny+girl+image.jpg"/>
+<div class="text-center ">
 </div>
