--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,5 +4,21 @@
     <h3>Unlock New Moves As You Go!</h3>
 </div>
  
-<div class="text-center ">
+<div class="row">
+  <div class="col-md-6">
+    <div class="well">
+      <h2 class="text-center">Basic Membership</h2>
+      <h4>Sign up for free and get basic access to the community.</h4>
+      <br/>
+      <%= link_to "Sign up with Basic", new_user_registration_path, class: 'btn btn-primary btn-lg btn-block' %>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <div class="well">
+      <h2 class="text-center">Pro Membership</h2>
+      <h4>Sign up for the pro account for $10/month and get access to the community and videos!</h4>
+      <br>
+      <%= link_to "Sign up with Pro", new_user_registration_path, class: 'btn btn-success btn-lg btn-block' %>
+    </div>
+  </div>
 </div>
