--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,57 +1,48 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Pole-Up.com | Online Pole Dance Lessons</title>
-    <%= stylesheet_link_tag    'application', media: 'all' %>
-    <%= javascript_include_tag "https://js.stripe.com/v2", type: 'text/javascript' %>
-    <%= javascript_include_tag 'application' %>
-    <%= tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY %>
-    <%= csrf_meta_tags %>
-  </head>
-  <body>
-  
-    <nav class="navbar navbar-default navbar-static-top" role="navigation">
-      <div class='container'>
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          
-          <%= link_to root_path, class: 'navbar-brand' do %>
-            <i class="fa fa-star-o"></i>
-            Pole-Up
-          <% end %>
-          
-        </div>
-        <div class="collapse navbar-collapse" id="main-nav-collapse">
-
-          <div class="nav navbar-nav navbar-right">
-            <% if current_user %>
-              <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: 'btn btn-primary navbar-btn' %>
-            <% else %>
-              <%= link_to "Log In", new_user_session_path, class: 'btn btn-primary navbar-btn', method: :get %>
-            <% end %>
-          
-          </div>
-          <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "About", about_path %></li>
-            <li><%= link_to "Contact Us", new_contact_path %></li>
-        </div><!-- /.navbar-collapse -->
+<head>
+  <title>Pole-Up.com</title>
+  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= javascript_include_tag "https://js.stripe.com/v2/", type: 'text/javascript' %>
+  <%= javascript_include_tag 'application' %>
+  <%= tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY %>
+  <%= csrf_meta_tags %>
+</head>
+<body>
+<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+  <div class='container'>
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <%= link_to root_path, class: 'navbar-brand' do %>
+        <i class="fa fa-users"></i>
+        Pole-Up
+      <% end %>
+    </div>
+    <div class="collapse navbar-collapse" id="main-nav-collapse">
+      <div class="nav navbar-nav navbar-right">
+        <% if current_user %>
+          <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: 'btn btn-primary navbar-btn' %>
+        <% else %>
+          <%= link_to "Log In", new_user_session_path, class: 'btn btn-primary navbar-btn', method: :get %>
+        <% end %>
       </div>
-    </nav>
-  
-  
-  <div class="container">
-    <% flash.each do |key, value| %>
-      <%= content_tag :div, value, class: "alert alert-#{key} col-md-4 col-md-offset-4" %>
-    <% end %>
-    
-    <%= yield %>
-    
+      <ul class="nav navbar-nav navbar-right">
+        <li><%= link_to "About", about_path %></li>
+        <li><%= link_to "Contact Us", new_contact_path %></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
   </div>
-  
-  </body>
+</nav>
+<div class="container">
+  <% flash.each do |key, value| %>
+    <%= content_tag :div, value, class: "alert alert-#{key}" %>
+  <% end %>
+  <%= yield %>
+</div>
+</body>
 </html>
