updated home page, about us page, contact page,navbar icon

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,4 @@
 <h2>About Us</h2>
+<div class="text-center">
+    <img src="https://static1.squarespace.com/static/53321908e4b0e6650a1f0e80/t/548760dfe4b0930d7065305f/1418158311399/?format=1000w">
+</div>
