--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,3 +25,13 @@
     </div>
   </div>
 </div>
+
+<style>
+  body { 
+    background: url(https://c1.staticflickr.com/1/725/31446205054_17eb7c988e_o.jpg) no-repeat center center fixed ; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+</style>
