--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,3 +1,7 @@
+<div class="text-center">
+  <img src="https://static1.squarespace.com/static/53321908e4b0e6650a1f0e80/t/55307110e4b0491a492a796b/1429238066964/?format=500w" height="300px" >
+</div>
+<br>
 <div class="row">
   <div class="col-md-4 col-md-offset-4">
     <div class="well">
@@ -18,4 +22,7 @@
       <% end %>
     </div>
   </div>
+  
 </div>
+
+
