--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,7 @@
 <%= link_to "Create your profile!", new_user_profile_path(current_user) if current_user %>
+<br>
+<br>
+
 
 <div class="jumbotron text-center">
     <h1>Welcome to Pole-Up</h1>
@@ -10,8 +13,15 @@
   <div class="col-md-6">
     <div class="well">
       <h2 class="text-center">Basic Membership</h2>
-      <h4>Sign up for free and get basic access to the community.</h4>
-      <br/>
+      <h4>Sign up for free and get basic access to the community. No Pole? No Problem!</h4>
+      <ul>
+        <li>Striptease tutorial videos</li>
+        <li>Lap dance tutorial videos</li>
+        <li>Sexy dance move videos</li>
+        <li>Access to our online community of supportive women</li>
+        <li>Monthly dance challenges</li>
+      </ul>
+  
       <%= link_to "Sign up with Basic", new_user_registration_path(plan: @basic_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
     
     </div>
@@ -20,15 +30,29 @@
   <div class="col-md-6">
     <div class="well">
       <h2 class="text-center">Pro Membership</h2>
-      <h4>Sign up for the pro account for $10/month and get access to the community and videos!</h4>
-      <br>
+      <h4>Sign up for the pro account for $10/month and unlimited access!</h4>
+      <ul>
+        <li>Ten levels of pole dance moves and choreography</li>
+        <li>Warm up exercises</li>
+        <li>Fun pole workouts</li>
+        <li>Access to our online community of supportive women</li>
+        <li>Monthly dance challenges</li>
+      </ul>
+      
       <%= link_to "Sign up with Pro", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block' %>
     
     </div>
   </div>
 </div>
 
+<footer class="footer text-center">
+  <p>&copy; 2017 Pole up LLC</p>
 <style>
+  
+  footer {
+    color: #fff;
+  }
+
   body { 
     background: url(https://c1.staticflickr.com/1/725/31446205054_17eb7c988e_o.jpg) no-repeat center center fixed ; 
     -webkit-background-size: cover;
