--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,63 +1,44 @@
-<%= link_to "Create your profile!", new_user_profile_path(current_user) if current_user %>
-<br>
-<br>
-
-
 <div class="jumbotron text-center">
-    <h1>Welcome to Pole-Up</h1>
-    <h3>Learn How To Pole Dance At Home While Getting A Great Workout. </h3>
-    <h3>Unlock New Moves As You Go!</h3>
+  <h1>Welcome to Pole-UP</h1>
+  <h3>Pole-up is an online membership community that will teach you how to pole dance in the comfort of your own home.</h3>
 </div>
- 
+
 <div class="row">
-  <div class="col-md-6">
-    <div class="well">
-      <h2 class="text-center">Basic Membership</h2>
-      <h4>Sign up for free and get basic access to the community. No Pole? No Problem!</h4>
-      <ul>
-        <li>Striptease tutorial videos</li>
-        <li>Lap dance tutorial videos</li>
-        <li>Sexy dance move videos</li>
-        <li>Access to our online community of supportive women</li>
-        <li>Monthly dance challenges</li>
-      </ul>
-  
-      <%= link_to "Sign up with Basic", new_user_registration_path(plan: @basic_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
-    
+  <% if user_signed_in? %>
+    <div class="col-md-6">
+      <div class="well">
+        <h2 class="text-center">Your Profile</h2>
+        <% if current_user.profile %>
+          <%= link_to "Edit your profile", "#", class: 'btn btn-default btn-lg btn-block' %>
+          <%= link_to "View your profile", user_path(current_user), class: 'btn btn-default btn-lg btn-block' %>
+        <% else %>
+          <p>Create your profile so that you can share your information with the community.</p>
+          <%= link_to "Create your profile", new_user_profile_path(current_user), class: 'btn btn-default btn-lg btn-block'%>
+        <% end %>
+      </div>
     </div>
-  </div>
-  
-  <div class="col-md-6">
-    <div class="well">
-      <h2 class="text-center">Pro Membership</h2>
-      <h4>Sign up for the pro account for $10/month and unlimited access!</h4>
-      <ul>
-        <li>Ten levels of pole dance moves and choreography</li>
-        <li>Warm up exercises</li>
-        <li>Fun pole workouts</li>
-        <li>Access to our online community of supportive women</li>
-        <li>Monthly dance challenges</li>
-      </ul>
-      
-      <%= link_to "Sign up with Pro", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block' %>
-    
+    <div class="col-md-6">
+      <div class="well">
+        <h2 class="text-center">The Community</h2>
+        <p>Visit the community to meet other developers, entrepreneurs, and investors!</p>
+        <%= link_to "Visit the community", "#", class: 'btn btn-default btn-lg btn-block' %>
+      </div>
     </div>
-  </div>
+  <% else %>
+    <div class="col-md-6">
+      <div class="well">
+        <h2 class="text-center">Basic Membership</h2>
+        <h4>Sign up for free and get basic access to the community.</h4>
+        <br/>
+        <%= link_to "Sign up with Basic", new_user_registration_path(plan: @basic_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="well">
+        <h2 class="text-center">Pro Membership</h2>
+        <h4>Sign up for the pro account for $10/month and get access to the community and contact information!</h4>
+        <%= link_to "Sign up with Pro", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block' %>
+      </div>
+    </div>
+  <% end %>
 </div>
-
-<footer class="footer text-center">
-  <p>&copy; 2017 Pole up LLC</p>
-<style>
-  
-  footer {
-    color: #fff;
-  }
-
-  body { 
-    background: url(https://c1.staticflickr.com/1/725/31446205054_17eb7c988e_o.jpg) no-repeat center center fixed ; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-  }
-</style>
