Added correct user profile edit and show check

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron text-center">
-  <h1>Welcome to Pole-UP</h1>
+  <h1>Welcome to Pole-Up</h1>
   <h3>Pole-up is an online membership community that will teach you how to pole dance in the comfort of your own home.</h3>
 </div>
 
