--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -27,7 +27,9 @@
 <div class="form-group">
     <%= f.label :avatar %>
     <%= f.file_field :avatar, class: 'form-control' %>
+    <p class="help-block">Upload profile picture here. </p>
 </div>
+
 
 <div class="form-group">
   <%= f.submit "Update Profile", class: 'btn btn-primary' %>
