--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,12 +1,24 @@
 .job-title-icon {
-    width: 30px;
-    height: 30px;
-    border: 2px solid black;
-    display: inline-block;
-    border-radius: 4px;
-    background-color: #286090;
-    color: #fff;
-    border-color: #2e6da4;
-    text-align: center;
-    text-align: middle;
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  border: 2px solid #2e6da4;
+  border-radius: 4px;
+  background-color: #337ab7;
+  color: white;
+  text-align: center;
+}
+.well.profile-block {
+  color: #fff;
+  h3 {
+    margin-top: 0;
+  }
+}
+.well.profile-description {
+  background-color: #5cb85c;
+  border-color: #4cae4c;
+}
+.well.contact-info {
+  background-color: #5bc0de;
+  border-color: #46b8da;
 }
