--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,12 @@
+/* Users Show Page Styles */
+
+.user-show-avatar {
+  height: 128px;
+  width: 128px;
+  box-shadow: 5px 5px 5px #888888;
+  // border: 1px solid white;
+}
+
 .job-title-icon {
   display: inline-block;
   width: 30px;
@@ -8,18 +17,31 @@
   color: white;
   text-align: center;
 }
+
 .well.profile-block {
   color: #fff;
   h3 {
     margin-top: 0;
   }
 }
+
 .well.profile-description {
   background-color: #5cb85c;
   border-color: #4cae4c;
 }
+
 .well.contact-info {
   background-color: #5bc0de;
   border-color: #46b8da;
 }
 
+
+/* Users Index Page Styles */
+
+.user-index-avatar {
+  border-radius: 50%;
+}
+
+.well.white-bg {
+  background-color: white;
+}
