--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -42,3 +42,12 @@
     </div>
   <% end %>
 </div>
+
+<style>
+  body {
+    background-image: url(https://c1.staticflickr.com/1/725/31446205054_17eb7c988e_o.jpg);
+    background-repeat:no-repeat;
+    /*background-position: center center;*/
+    background-size: cover;
+  }
+</style>
