--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
 <h2>About Us</h2>
-<p>Welcome to Dev Match. We are a community of developers, entrepreneurs, and investors who are interested in meeting one another and sharing ideas.</p>
+<p>Welcome to Pole Up. We are a community of dancers, entrepreneurs, and investors who are interested in meeting one another and sharing ideas.</p>
 <div class="text-center">
     <img src="https://static1.squarespace.com/static/53321908e4b0e6650a1f0e80/t/548760dfe4b0930d7065305f/1418158311399/?format=1000w">
 </div>
