--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= javascript_include_tag 'application' %>
   <%= tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY %>
   <%= csrf_meta_tags %>
+  <%= favicon_link_tag asset_path('https://c1.staticflickr.com/1/859/43745969011_e0c37e431b_o.png'), :rel => 'icon', :type => 'image/png' %>
 </head>
 <body>
 <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
