--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -27,7 +27,7 @@
       </div>
     <% end %>
     <h3>Cancel my account</h3>
-    <p>please don't <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger' %></p>
+    <p>We're sorry to see you go!<%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger' %></p>
     <%= link_to "Back", :back %>
   </div>
 </div>
