--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
 <h2>About Us</h2>
-<p>Welcome to Pole Up. We are a community of dancers, entrepreneurs, and investors who are interested in meeting one another and sharing ideas.</p>
+<p>Welcome to Dance Up. We are a community of dancers, entrepreneurs, and investors who are interested in meeting one another and sharing ideas.</p>
 <div class="text-center">
     <img src="https://c1.staticflickr.com/1/862/42793323285_b98131713a_o.jpg">
 </div>
