--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-8 col-md-offset-2">
-    <h1>Pole Up Community</h1>
-    <p>Welcome to the Pole Up community. Users must fill out a profile in order to be visible in the community.</p>
+    <h1>Dance Up Community</h1>
+    <p>Welcome to the Dance Up community. Users must fill out a profile in order to be visible in the community.</p>
     <ul class="list-unstyled">
       <% @users.each do |user| %>
         <% if user.profile %>
