--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron text-center">
-  <h1>Welcome to Pole-Up</h1>
-  <h3>Pole-up is an online membership community that will teach you how to pole dance in the comfort of your own home.</h3>
+  <h1>Welcome to Dance Up</h1>
+  <h3>Dance Up is an online membership community that will teach you how to dance in the comfort of your own home.</h3>
 </div>
 <div class="row">
   <% if user_signed_in? %>
