--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -35,7 +35,7 @@
       <div class="col-md-6">
         <div class="well">
           <h2 class="text-center">Pro Membership</h2>
-          <h4>Sign up for the pro account for $10/month and get access to the community and contact information!</h4>
+          <h4>Sign up for the pro account for $15/month and get access to the community and unlimited instruction videos!</h4>
           <%= link_to "Sign up with Pro", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block' %>
         </div>
       </div>
@@ -43,7 +43,7 @@
 </div>
 <style>
 body {
-  background: url(https://c1.staticflickr.com/1/725/31446205054_17eb7c988e_o.jpg) no-repeat center center fixed;
+  background: url(https://images.pexels.com/photos/864990/pexels-photo-864990.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
