--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
         <span class="icon-bar"></span>
       </button>
       <%= link_to root_path, class: 'navbar-brand' do %>
-        <i class="fa fa-users"></i>
+        <i class="fa fa-star"></i>
         Dance Up
       <% end %>
     </div>
