--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -1,3 +1,12 @@
-// Place all the styles related to the pages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+/*Place all the styles related to the pages controller here.
+They will automatically be included in application.css.
+You can use Sass (SCSS) here: http://sass-lang.com/
+*/
+
+.edit_user input.btn {
+	margin-top: 10px;
+}
+
+.text-center img {
+	max-width: 100%;
+}
